update npm before releasing for OIDC connect

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -95,4 +95,5 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           registry-url: 'https://registry.npmjs.org'
-      - run: npm publish ./datadog-native-appsec-${{ steps.package.outputs.version }}.tgz --provenance
+      - run: npm install -g npm@latest
+      - run: npm publish ./datadog-native-appsec-${{ steps.package.outputs.version }}.tgz
